store schedules in db, implement cron jobs and update schemas
