# client/openapi.json
@@ -321,6 +321,9 @@
                         "id": {
                           "type": "number"
                         },
+                        "created_at": {
+                          "type": "number"
+                        },
                         "name": {
                           "type": "string"
                         },
@@ -343,7 +346,7 @@
                         "online": {
                           "type": "boolean"
                         },
-                        "light": {
+                        "brightness": {
                           "anyOf": [
                             {
                               "type": "number"
@@ -358,6 +361,9 @@
                             {
                               "type": "object",
                               "properties": {
+                                "active": {
+                                  "type": "boolean"
+                                },
                                 "on": {
                                   "description": "UTC timestamp in milliseconds",
                                   "type": "integer",
@@ -372,6 +378,7 @@
                                 }
                               },
                               "required": [
+                                "active",
                                 "on",
                                 "off"
                               ]
@@ -380,19 +387,6 @@
                               "type": "null"
                             }
                           ]
-                        },
-                        "water_level": {
-                          "anyOf": [
-                            {
-                              "type": "string"
-                            },
-                            {
-                              "type": "null"
-                            }
-                          ]
-                        },
-                        "number_of_plants": {
-                          "type": "number"
                         },
                         "lan_ip": {
                           "anyOf": [
@@ -417,15 +411,14 @@
                       },
                       "required": [
                         "id",
+                        "created_at",
                         "name",
                         "mac_address",
                         "organization_id",
                         "last_seen",
                         "online",
-                        "light",
+                        "brightness",
                         "light_schedule",
-                        "water_level",
-                        "number_of_plants",
                         "lan_ip",
                         "lan_ws_port"
                       ]
@@ -474,6 +467,9 @@
                           "id": {
                             "type": "number"
                           },
+                          "created_at": {
+                            "type": "number"
+                          },
                           "name": {
                             "type": "string"
                           },
@@ -519,6 +515,7 @@
                         },
                         "required": [
                           "id",
+                          "created_at",
                           "name",
                           "mac_address",
                           "organization_id",
@@ -540,9 +537,9 @@
         }
       }
     },
-    "/api/device/{id}/light/set": {
+    "/api/device/{id}/light/brightness": {
       "post": {
-        "operationId": "setLight",
+        "operationId": "setBrightness",
         "summary": "Adjust the the brightness of the light",
         "tags": [
           "Devices"
@@ -593,6 +590,9 @@
               "schema": {
                 "type": "object",
                 "properties": {
+                  "active": {
+                    "type": "boolean"
+                  },
                   "on": {
                     "description": "UTC timestamp in milliseconds",
                     "type": "integer",
@@ -607,6 +607,7 @@
                   }
                 },
                 "required": [
+                  "active",
                   "on",
                   "off"
                 ]
